--- a/dw_webservice/appsettings.json
+++ b/dw_webservice/appsettings.json
@@ -36,6 +36,6 @@
 
   "Firebase": {
     "url_fcm": "https://fcm.googleapis.com/fcm/send",
-    "server_key": "AAAA6iSy48Y:APA91bGciiiK6JZBuuJI7RMp157Duwm3SuxG8Cfsp-vQeXJ2Lg4uNqQoXoi799jZ0QnMLm8NtgGTfVMOMl74Jhbnp_S_KbUp5B-iu9asF73hCd8U30y4mYFRx246KJ3fJu3Fgm5ioe3Y"
+    "server_key": ""
   }
 }
